@@ -26,8 +26,8 @@
 //	$DB_TYPE	="POSTGRESQL";
 	$DB_TYPE	="MYSQL";
 	$DB_SERVER	="localhost";
-	$DB_DATABASE	="zabbix";
-//	$DB_DATABASE	="osmiy";
+//	$DB_DATABASE	="zabbix";
+	$DB_DATABASE	="osmiy";
 	$DB_USER	="root";
 	$DB_PASSWORD	="";
 // END OF DATABASE CONFIGURATION
